Add Json file vn and fix some html to translate

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,4 +1,62 @@
 {
+    "PROFILE": "HỒ SƠ",
+    "LOGOUT": "ĐĂNG XUẤT",
+    "SEE ALL": "XEM TẤT CẢ",
+    "No record found": "Không tìm thấy bản tin nào",
+    "NOTIFICATIONS": "THÔNG BÁO",
+    "SHEET 1": "BẢNG 1",
+    "Submit": "Nộp",
+    "Form controls" :"Điều khiển biểu mẫu",
+    "Name of column email: ":"Tên cột email: ",
+    "Name of column phone: ":"Tên cột số điện thoại: ",
+    "Name of column faculty: ": "Tên cột khoa: ",
+    "Name of column code class: ": "Tên cột mã lớp: ",
+    "phone": "số điện thoại",
+    "faculty": "khoa",
+    "class": "lớp",
+    "code_student": "mã sinh viên",
+    "Name of column code student: ": "Tên cột mã sinh viên:",
+    "name":"tên",
+    "Name of column name: ": "Tên cột tên sinh viên:",
+    "Name Tab Google Sheet: ": "Tên Thẻ Tên Google Trang Tính: ",
+    "Link Google Sheet: ": "Đường Dẫn Google Trang Tính: ",
+    "Form Google": "BIỂU MẪU GOOGLE",
+    "FORM ELEMENTS": "THÀNH PHẦN BIỂU MẪU",
+    "FORMS": "BIỂU MẪU",
+    "Search menu...": "Tìm kiếm tùy chọn...",
+    "LIBRARY": "THƯ VIỆN",
+    "SETTINGS": "CÀI ĐẶT",
+    "TERMINAL": "CỬA SỔ LỆNH",
+    "CALENDAR": "LỊCH",
+    "DISK DRIVE": "Ổ CỨNG",
+    "INBOX": "HỘP THƯ ĐẾN",
+    "Menu": "Tùy chọn",
+    "Google Sheet Import": "Nhập Google Trang Tính",
+    "Home": "Trang Chủ",
+    "Sign In": "Đăng nhập",
+    "Already have an Account ID? ": "Bạn đã có Tài Khoản? ",
+    "One Admin ID is all you need to access all the Admin services.": "Một ID quản trị viên là tất cả những gì bạn cần để truy cập tất cả dịch vụ của Quản trị viên.",
+    "Terms of Use": "Điều Khoản Sử Dụng",
+    "I have read and agree to the ": "Tôi đã đọc và đồng ý với ",
+    "e.g John Smith": "ví dụ Nguyễn Hưng",
+    "username@address.com": "tên người dùng@địa chỉ.com",
+    "Female":"Nữ",
+    "Male": "Nam",
+    "Gender": "Giới Tính",
+    "Sign Up": "Đăng Kí",
+    "Sign up": "Đăng kí.",
+    "Don't have an account yet?": "Bạn chưa có tài khoản?",
+    "Forgot password?" : "Quên mật khẩu?",
+    "Please Enter Email...": "Vui Lòng Nhập Email...",
+    "For your protection, please verify your identity.": "Để bảo vệ bạn, vui lòng xác minh danh tính của bạn.",
+    "Start Scanning": "Bắt Đầu Quét",
+    "Index": "Mục lục",
+    "page header description goes here...": "mô tả tiêu đề trang ở đây",
+    "Select Camera": "Chọn Camera",
+    "Scan an Image File": "Quét tệp Hình Ảnh",
+    "Vip Member": "Thành Viên Quan Trọng",
+    "Start build your page here": "Bắt đầu xây dựng trang web của bạn tại đây",
+    "Log In": "Đăng Nhập",
     "Starter Page": "Page Bắt Đầu",
     "30 Days": "30 Ngày",
     "60 Days": "60 Ngày",
