Fix Format translate and add 404 page translate to json

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,4 +1,8 @@
 {
+    "Go Back": "Quay Lại",
+    "Here are some helpful links instead:": "Thay vào đó, đây là một số liên kết hữu ích khác:",
+    "We can't seem to find the page you're looking for": "Chúng tôi dường như không thể tìm thấy trang bạn đang tìm kiếm",
+    "Oops!": "Ôi Không!",
     "PROFILE": "HỒ SƠ",
     "LOGOUT": "ĐĂNG XUẤT",
     "SEE ALL": "XEM TẤT CẢ",
