--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,4 +1,15 @@
 {
+    "content":"nội dung",
+    "Content":"Nội Dung",
+    "description": "mô tả",
+    "Description": "Mô tả",
+    "author name":"tên tác giả",
+    "Author":"Tác Giả", 
+    "subtitle":"phụ đề",  
+    "Subtitle":"Phụ Đề",
+    "title":"tiêu đề",   
+    "Title:":"Tiêu Đề",
+    "Register Event": "Đăng Kí Sự Kiện",
     "Go Back": "Quay Lại",
     "Here are some helpful links instead:": "Thay vào đó, đây là một số liên kết hữu ích khác:",
     "We can't seem to find the page you're looking for": "Chúng tôi dường như không thể tìm thấy trang bạn đang tìm kiếm",
