Translate file Http
1. Add function trans()
2. Fix content at file ManageEventController.php (More successful collaborators to Add Collaborators Successfully)

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,4 +1,25 @@
 {
+    
+    "Delete User Successfully":"Xóa Người Dùng Thành Công",
+    "Edit User Successfully":"Chỉnh Sửa Người Dùng Thành Công",
+    "Add User Successfully":"Thêm Người Dùng Thành Công",
+    "Manage Events - invitation to join":"Quản lý sự kiện - lời mời tham gia",
+    "Error Unknown":"Lỗi Không Xác Định",
+    "Login Successfully":"Đăng Nhập Thành Công",
+    "Save Setting Successfully":"Lưu Cài Đặt Thành Công",
+    "Change Information Successfully":"Thay Đổi Thông Tin Thành Công",
+    "Delete Notify Successfully":"Xóa Thông Báo Thành Công",
+    "Edit Notify Successfully":"Chỉnh Sửa Thông Báo Thành Công",
+    "Add Notify Successfully":"Thêm Thông Báo Thành Công",
+
+    "Add Collaborators Successfully":"Thêm Cộng Tác Viên Thành Công",
+    "Delete Event Successfully":"Xóa Sự Kiện Thành Công",
+    "Update Event Successfully": "Cập Nhật Sự Kiện Thành Công",
+    "You do not have permission to edit this event !":"Bạn không có quyền chỉnh sửa sự kiện này!",
+    "Successful attendance":"Tham dự thành công",
+    "welcome": "chào mừng",
+    "Verify Email Successfully !!!": "Xác Minh Email Thành Công !!!",
+    "Change Password Successfully !!!": "Đổi Mật Khẩu Thành Công !!!",
     "content":"nội dung",
     "Content":"Nội Dung",
     "description": "mô tả",
