Translate all file in folder views

--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -1,5 +1,97 @@
 {
-    
+    "Primary button":"Nút Chính",
+    "Hello, Bootstrap and Webpack!":"Xin chào, Bootstrap và Webpack!",
+    "Join date":"Ngày Tham Gia",
+    "All Users":"Tất Cả Người Dùng",
+    "Edit User":"Chỉnh Sửa Người Dùng",
+    "Form Register User":"Đăng Ký Người Dùng",
+    "Create User":"Tạo Người Dùng",
+    "Edit Notify":"Chỉnh Sửa Thông Báo",
+    "Create Notify":"Tạo Thông Báo",
+    "Created At":"Tạo Tại",
+    "All notices on the web":"Tất cả các thông báo trên web",
+    "All Notify Of User":"Tất Cả Thông Báo Của Người Dùng",
+    "Add Icon":"Thêm Biểu Tượng",
+    "Import List Register":"Đăng Kí Danh Sách Nhập",
+    "Event Day: ":"Ngày Diễn Ra",
+    "Detail Event":"Chi Tiết Sự Kiện",
+    "Register through google form":"Đăng kí thông qua biểu mẫu google",
+    "Successfully added":"Đã thêm thành công",
+    "Success":"Thành Công",
+    "Choose Event In Progress":"Chọn Sự Kiện Đang Diễn Ra",
+    "Attendance list of students'":"Danh sách học sinh tham dự",
+    "Scan QR CODE":"Quét Mã QR",
+    "Unknown":"Không Biết",
+    "Not In Club":"Không Có Trong Câu Lạc Bộ",
+    "In Club":"Trong Câu Lạc Bộ",
+    "Type":"Thể Loại",
+    "ID Student":"Mã Định Danh Học Sinh/Sinh Viên",
+    "Enter information to register for the event.":"Điền thông tin để đăng kí sự kiện",
+    "Enter Code":"Nhập Mã",
+    "More Collaborators":"Cần Thêm Cộng Tác Viên",
+    "Are you sure you want to register for the event?":"Bạn có chắc muốn đăng kí sự kiện này?",
+    "Newest":"Mới Nhất",
+    "Oldest":"Cũ Nhất",
+    "Select filters":"Chọn Bộ Lọc",
+    "Choose Event Import":"Chọn Sự Kiện Nhập Vào",
+    "Select Event":"Chọn Sự Kiện",
+    "How to use":"Hướng dẫn sử dụng",
+    "Do you want to add members registered by google sheet":"Bạn có muốn thêm thành viên đã đăng kí ở Google trang tính",
+    "click":"nhấp vào",
+    "Edit Event":"Chỉnh Sửa",
+    "Form Register Event":"Phiếu Đăng Kí Sự Kiện",
+    "Create Event":"Tạo Sự Kiện",
+    "Table":"Bảng",
+    "Destroy":"Tiêu Hủy",
+    "Published":"Đã Công Bố",
+    "Number Participants":"Số Người Tham Gia",
+    "No Publish":"Không Công Bố",
+    "No Accepted":"Đã Không Chấp Nhận",
+    "Accepted":"Đã chấp nhận",
+    "ALL":"TẤT CẢ",
+    "User":"Người Dùng",
+    "All Events":"Tất Cả Sự Kiện",
+    "Admin":"Quản trị viên",
+    "All events you've created":"Tất cả các sự kiện bạn đã tạo",
+    "QR Code":"Mã QR",
+    "Add Collaborators":"Thêm cộng tác viên",
+    "Code Manage Event":"Mã quản lý sự kiện",
+    "Accept":"Chấp Nhận",
+    "Event Venue":"Địa Điểm Tổ Chức",
+    "Publish":"Công Bố",
+    "Title":"Tiêu Đề",
+    "Number Of Participants":"Số người tham gia",
+    "The page you requested was not found.":"Trang bạn yêu cầu không tìm thấy.",
+    "ACCESS NOT GRANTED":"KHÔNG ĐƯỢC PHÉP TRUY CẬP",
+    "Tap the button below to verify your email address. If you didn't request a new password, you can safely delete this email.":"Nhấn vào nút bên dưới để xác minh địa chỉ email của bạn. Nếu bạn không yêu cầu mật khẩu mới, bạn có thể xóa email này một cách an toàn.",
+    "Do Something Sweet":"Làm Điều Gì Đó Ngọt Ngào",
+    "Tap the button below to reset your customer account password. If you didn't request a new password, you can safely delete this email.":"Nhấn vào nút bên dưới để đặt lại mật khẩu tài khoản khách hàng của bạn. Nếu không yêu cầu mật khẩu mới, bạn có thể xóa email này một cách an toàn.",
+    "Reset Password!":"Đặt Lại Mật Khẩu!",
+    "We are excited to have you on board and look forward to providing you with the best possible experience.":"Chúng tôi rất vui khi có bạn tham gia và mong muốn cung cấp cho bạn trải nghiệm tốt nhất có thể.",
+    "Thank you for registering with us. Your account has been successfully created and is now ready to use.":"Cảm ơn vì đăng ký với chúng tôi. Tài khoản của bạn đã được tạo thành công và hiện đã sẵn sàng để sử dụng.",
+    "Congratulations On Successful Registration!":"Chúc Mừng Bạn Đã Đăng Ký Thành Công!",
+    "Visit Our Website":"Truy cập trang web của chúng tôi",
+    "Default password is: 12345678":"Mật khẩu mặc định là: 12345678",
+    "We are writing this letter because you were invited by the admin to join our website":"Chúng tôi viết thư này vì bạn được quản trị viên mời tham gia trang web của chúng tôi",
+    "Dear":"Kính chào",
+    "Invitation To Join!":"Lời Mời Tham Gia!",
+    "Media":"Phương Tiện Truyền Thông",
+    "Notify":"Thông Báo",
+    "Attendant Events":"Sự Kiện Tiếp Đón",
+    "Manage":"Quản Lý",
+    "Events":"Sự Kiện",
+    "Analytics":"Phân Tích",
+    "Users":"Người Dùng",
+    "No record found'":"Không tìm thấy bản ghi nào'",
+    "JUST NOW":"NGAY BÂY GIỜ",
+    "Verify Email":"Xác Nhận Email",
+    "Vietnamese":"Tiếng Việt",
+    "English":"Tiếng Anh",
+    "Fill in your details to get started with us":"Điền thông tin của bạn để bắt đầu với chúng tôi",
+    "and":"và",
+    "I have read and agree to the":"Tôi đã đọc và đồng ý với",
+    "Forgot password? Need help remembering? You can request a reminder be sent to your linked email here.":"Quên mật khẩu? Cần giúp ghi nhớ? Bạn có thể yêu cầu gửi lời nhắc đến email được liên kết của mình tại đây.",
+    "CAN'T SIGN IN?": "KHÔNG THỂ ĐĂNG NHẬP?",
     "Delete User Successfully":"Xóa Người Dùng Thành Công",
     "Edit User Successfully":"Chỉnh Sửa Người Dùng Thành Công",
     "Add User Successfully":"Thêm Người Dùng Thành Công",
@@ -11,7 +103,6 @@
     "Delete Notify Successfully":"Xóa Thông Báo Thành Công",
     "Edit Notify Successfully":"Chỉnh Sửa Thông Báo Thành Công",
     "Add Notify Successfully":"Thêm Thông Báo Thành Công",
-
     "Add Collaborators Successfully":"Thêm Cộng Tác Viên Thành Công",
     "Delete Event Successfully":"Xóa Sự Kiện Thành Công",
     "Update Event Successfully": "Cập Nhật Sự Kiện Thành Công",
