--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -25,7 +25,7 @@
     "Not In Club":"Không Có Trong Câu Lạc Bộ",
     "In Club":"Trong Câu Lạc Bộ",
     "Type":"Thể Loại",
-    "ID Student":"Mã Định Danh Học Sinh/Sinh Viên",
+    "Code Student":"Mã Sinh Viên",
     "Enter information to register for the event.":"Điền thông tin để đăng kí sự kiện",
     "Enter Code":"Nhập Mã",
     "More Collaborators":"Cần Thêm Cộng Tác Viên",
@@ -57,7 +57,7 @@
     "Add Collaborators":"Thêm cộng tác viên",
     "Code Manage Event":"Mã quản lý sự kiện",
     "Accept":"Chấp Nhận",
-    "Event Venue":"Địa Điểm Tổ Chức",
+    "Happened At":"Thời Gian Tổ Chức",
     "Publish":"Công Bố",
     "Title":"Tiêu Đề",
     "Number Of Participants":"Số người tham gia",
@@ -85,8 +85,6 @@
     "No record found'":"Không tìm thấy bản ghi nào'",
     "JUST NOW":"NGAY BÂY GIỜ",
     "Verify Email":"Xác Nhận Email",
-    "Vietnamese":"Tiếng Việt",
-    "English":"Tiếng Anh",
     "Fill in your details to get started with us":"Điền thông tin của bạn để bắt đầu với chúng tôi",
     "and":"và",
     "I have read and agree to the":"Tôi đã đọc và đồng ý với",
