--- a/resources/lang/vi.json
+++ b/resources/lang/vi.json
@@ -85,6 +85,8 @@
     "No record found'":"Không tìm thấy bản ghi nào'",
     "JUST NOW":"NGAY BÂY GIỜ",
     "Verify Email":"Xác Nhận Email",
+    "Vietnamese":"Tiếng Việt",
+    "English":"Tiếng Anh",
     "Fill in your details to get started with us":"Điền thông tin của bạn để bắt đầu với chúng tôi",
     "and":"và",
     "I have read and agree to the":"Tôi đã đọc và đồng ý với",
